Refactored to separate the search algorithms from the graphs themselves