@@ -1,5 +1,6 @@
 package searches;
 
+import graphs.UnweightedUndirectedAdjListGraph;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
@@ -30,16 +31,17 @@ public class BreadthFirstSearchTest {
 
     static GraphSearchTestCase[] getBreadthFirstSearches() {
         return new GraphSearchTestCase[]{
-                new GraphSearchTestCase("empty graph always returns an empty list or null", new BreadthFirstSearch(),
+                new GraphSearchTestCase("empty graph always returns an empty list or null", new BreadthFirstSearch(new UnweightedUndirectedAdjListGraph()),
                         new SearchResult(1, 2, Collections.emptyList()),
                         new SearchResult(2, 1, Collections.emptyList()),
                         new SearchResult(5, 1, Collections.emptyList())
                 ),
                 new GraphSearchTestCase("straight line",
-                        new BreadthFirstSearch()
+                        new BreadthFirstSearch(new UnweightedUndirectedAdjListGraph()
                                 .addEdge(1, 2)
                                 .addEdge(2, 3)
-                                .addEdge(3, 4),
+                                .addEdge(3, 4)
+                        ),
                         new SearchResult(1, 4, Arrays.asList(1, 2, 3, 4)),
                         new SearchResult(4, 1, Arrays.asList(4, 3, 2, 1)),
                         new SearchResult(1, 3, Arrays.asList(1, 2, 3)),
@@ -53,13 +55,13 @@ public class BreadthFirstSearchTest {
                         // this is definitely enough for now!
                 ),
                 new GraphSearchTestCase("every node can reach itself without moving",
-                        new BreadthFirstSearch(/* empty! */),
+                        new BreadthFirstSearch(new UnweightedUndirectedAdjListGraph()),
                         new SearchResult(1, 1, List.of(1)),
                         new SearchResult(2, 2, List.of(2))
                         // you get the idea. We don't need to check for more of the same thing!
                 ),
                 new GraphSearchTestCase("search through a small graph",
-                        new BreadthFirstSearch()
+                        new BreadthFirstSearch(new UnweightedUndirectedAdjListGraph()
                                 .addEdge(1, 2)
                                 .addEdge(1, 3)
                                 .addEdge(2, 3)
@@ -68,7 +70,8 @@ public class BreadthFirstSearchTest {
                                 .addEdge(2, 5)
                                 .addEdge(4, 5)
                                 .addEdge(3, 6)
-                                .addEdge(5, 6),
+                                .addEdge(5, 6)
+                        ),
                         //    1
                         //   / \
                         //  2---3
@@ -82,7 +85,7 @@ public class BreadthFirstSearchTest {
                 ),
 
                 new GraphSearchTestCase("search through a medium graph",
-                        new BreadthFirstSearch()
+                        new BreadthFirstSearch(new UnweightedUndirectedAdjListGraph()
                                 .addEdge(1, 2)
                                 .addEdge(1, 3)
                                 .addEdge(2, 3)
@@ -93,7 +96,8 @@ public class BreadthFirstSearchTest {
                                 .addEdge(3, 6)
                                 .addEdge(5, 6)
                                 .addEdge(5, 7)
-                                .addEdge(3, 7),
+                                .addEdge(3, 7)
+                        ),
                         //    1
                         //   / \
                         //  2---3
@@ -125,19 +129,20 @@ public class BreadthFirstSearchTest {
 
     static CanReachEveryNodeTestCase[] getReachEveryNodeTestCases() {
         return new CanReachEveryNodeTestCase[]{
-                new CanReachEveryNodeTestCase("empty graph", new BreadthFirstSearch(), Collections.emptySet(), false),
-                new CanReachEveryNodeTestCase("singleton graph", new BreadthFirstSearch(), Set.of(1), true),
-                new CanReachEveryNodeTestCase("unconnected graph", new BreadthFirstSearch(), Set.of(1, 2, 3, 4), false),
+                new CanReachEveryNodeTestCase("empty graph", new BreadthFirstSearch(new UnweightedUndirectedAdjListGraph()), Collections.emptySet(), false),
+                new CanReachEveryNodeTestCase("singleton graph", new BreadthFirstSearch(new UnweightedUndirectedAdjListGraph()), Set.of(1), true),
+                new CanReachEveryNodeTestCase("unconnected graph", new BreadthFirstSearch(new UnweightedUndirectedAdjListGraph()), Set.of(1, 2, 3, 4), false),
                 new CanReachEveryNodeTestCase("straight line",
-                        new BreadthFirstSearch()
+                        new BreadthFirstSearch(new UnweightedUndirectedAdjListGraph()
                                 .addEdge(1, 2)
                                 .addEdge(2, 3)
-                                .addEdge(3, 4),
+                                .addEdge(3, 4)
+                        ),
                         Set.of(1, 2, 3, 4),
                         true
                 ),
                 new CanReachEveryNodeTestCase("small graph",
-                        new BreadthFirstSearch()
+                        new BreadthFirstSearch(new UnweightedUndirectedAdjListGraph()
                                 .addEdge(1, 2)
                                 .addEdge(1, 3)
                                 .addEdge(2, 3)
@@ -146,7 +151,8 @@ public class BreadthFirstSearchTest {
                                 .addEdge(2, 5)
                                 .addEdge(4, 5)
                                 .addEdge(3, 6)
-                                .addEdge(5, 6),
+                                .addEdge(5, 6)
+                        ),
                         //    1
                         //   / \
                         //  2---3
@@ -157,7 +163,7 @@ public class BreadthFirstSearchTest {
                 ),
 
                 new CanReachEveryNodeTestCase("medium interconnected graph",
-                        new BreadthFirstSearch()
+                        new BreadthFirstSearch(new UnweightedUndirectedAdjListGraph()
                                 .addEdge(1, 2)
                                 .addEdge(1, 3)
                                 .addEdge(2, 3)
@@ -168,7 +174,8 @@ public class BreadthFirstSearchTest {
                                 .addEdge(3, 6)
                                 .addEdge(5, 6)
                                 .addEdge(5, 7)
-                                .addEdge(3, 7),
+                                .addEdge(3, 7)
+                        ),
                         //    1
                         //   / \
                         //  2---3
@@ -181,12 +188,13 @@ public class BreadthFirstSearchTest {
                 ),
 
                 new CanReachEveryNodeTestCase("small disjoint graph",
-                        new BreadthFirstSearch()
+                        new BreadthFirstSearch(new UnweightedUndirectedAdjListGraph()
                                 .addEdge(1, 2)
                                 .addEdge(1, 3)
                                 .addEdge(2, 3)
                                 .addEdge(4, 5)
-                                .addEdge(5, 6),
+                                .addEdge(5, 6)
+                        ),
                         // 1 --- 2  4-5-6
                         //  \-3-/
                         Set.of(1, 2, 3, 4, 5, 6),
